# hexchat

./: meson.build  meson_options.txt
data/: hexchat.gresource.xml
data/icons/: meson.build
src/common/: util.c
src/fe-gtk/: meson.build  pixmaps.c  plugin-tray.c
