icondir = join_paths(get_option('datadir'), 'icons/hicolor')
install_data(
['hexchat.png','hexchat-tray.png','hexchat-tray-fileoffer.png','hexchat-tray-hilight.png','hexchat-tray-message.png','hexchat-tray-unread.png'],
  install_dir: join_paths(icondir, '48x48/apps')
)
install_data(
  'hexchat.svg',
  install_dir: join_paths(icondir, 'scalable/apps')
)
